--- a/SmartEVSE-3/platformio.ini
+++ b/SmartEVSE-3/platformio.ini
@@ -13,10 +13,11 @@ description = SmartEVSE v3 (ESP32)
 default_envs = release
 
 [env]
+platform = espressif32 @ 6.2.0
 board = esp32dev
 framework = arduino
-upload_port = /dev/cu.usbserial-0001
-monitor_port = /dev/cu.usbserial-0001
+upload_port = COM4 ; /dev/cu.usbserial-0001
+monitor_port = COM4 ; /dev/cu.usbserial-0001
 monitor_speed = 115200
 upload_speed = 2000000
 board_build.f_flash = 80000000L
@@ -35,9 +36,6 @@ monitor_filters = esp32_exception_decoder
 board_build.partitions = partitions_custom.csv
 
 [env:release]
-platform = espressif32
-platform_packages =
-   framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32#2.0.14
 extra_scripts = pre:eModbus-fix/fix.py
 build_flags = 
 	-DLOG_LEVEL=5
